--- a/pages/games.html
+++ b/pages/games.html
@@ -7,7 +7,7 @@
     <title>Games - Phantom</title>
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <meta name="referrer" content="origin">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
     <link rel="stylesheet" href="../styles/background.css">
@@ -40,8 +40,9 @@
 
             <div class="select-wrapper">
                 <select id="sort-select">
-                    <option value="popularity">Popularity</option>
-                    <option value="name">Name</option>
+                    <option value="trendingMonth">Trending</option>
+                    <option value="trendingYear">Popularity</option>
+                    <option value="trendingWeek">Trending (Week)</option>
                     <option value="newest">Newest</option>
                 </select>
             </div>
