--- a/pages/terms.html
+++ b/pages/terms.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - Phantom</title>
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
     <link rel="stylesheet" href="../styles/background.css">
@@ -67,7 +67,12 @@
             <p style="margin-bottom: 16px;">We shall not be liable for any damages arising from your use of this
                 service, including but not limited to direct, indirect, incidental, or consequential damages.</p>
 
-            <h2 style="font-size: 1.125rem; color: var(--text); margin: 24px 0 12px;">7. Changes to Terms</h2>
+            <h2 style="font-size: 1.125rem; color: var(--text); margin: 24px 0 12px;">7. License</h2>
+            <p style="margin-bottom: 16px;">Phantom Unblocked is licensed under the PolyForm Noncommercial License
+                1.0.0. This means you may use, modify, and distribute the software for non-commercial purposes only,
+                provided you maintain correct attribution to the original author.</p>
+
+            <h2 style="font-size: 1.125rem; color: var(--text); margin: 24px 0 12px;">8. Changes to Terms</h2>
             <p style="margin-bottom: 16px;">We reserve the right to modify these terms at any time. Continued use of the
                 service after changes constitutes acceptance of the new terms.</p>
         </div>
