--- a/staticsjv2/NT.html
+++ b/staticsjv2/NT.html
@@ -10,7 +10,7 @@
   <script src="../scripts/settings.js"></script>
   <script src="../scripts/background.js"></script>
   <script src="../scripts/quotes.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs" type="module"></script>
+  <script src="https://unpkg.com/lucide@latest/dist/umd/index.mjs" type="module"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
